--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
-        <title>Assignment 2: Path to Success</title>
+        <title>Assignment 3: Field & Feast</title>
     </head>
 
 
@@ -15,6 +15,8 @@
     <body>
 
         <header>
+            <img src="pictures/fieldandfeast-logo.png" alt="olive branch logo outlined in gold">
+            <
 
         </header>
 
@@ -25,7 +27,7 @@
             </section>
 
             <section>
-                
+
             </section>
 
         </main>
