added nav section

--- a/index.html
+++ b/index.html
@@ -16,14 +16,22 @@
 
         <header>
             <img src="pictures/fieldandfeast-logo.png" alt="olive branch logo outlined in gold">
-            <
-
+            <h1>Field & Feast</h1>
+            <p>Harvested with Care, Served with Elegance</p>
         </header>
+
+        <nav>
+            <ul>
+                <li><a href="#About-Us">About Us</a></li>
+                <li><a hred="#Offerings">Offerings</a></li>
+                <li><a href="#Gallery">Gallery</a></li>
+            </ul>
+        </nav>
 
 
         <main>
             <section>
-
+                
             </section>
 
             <section>
