--- a/index.html
+++ b/index.html
@@ -23,19 +23,24 @@
         <nav>
             <ul>
                 <li><a href="#About-Us">About Us</a></li>
-                <li><a hred="#Offerings">Offerings</a></li>
+                <li><a href="#Offerings">Offerings</a></li>
                 <li><a href="#Gallery">Gallery</a></li>
             </ul>
         </nav>
 
 
         <main>
-            <section>
-                
+            <section id="About-Us">
+                <h2>Welcome to Field & Feast</h2>
+                <p>At Field & Feast, we believe that the finest meals begin at the source. Rooted in tradition yet refined for the modern palate, our farm-to-table philosophy celebrates the beauty of seasonality, sustainability, and craftsmanship. From the sun-drenched fields where our produce is grown to the artfully curated dishes we serve, every detail is designed to bring you an experience of unparalleled quality and flavor.</p>
             </section>
 
-            <section>
+            <section id="Offerings">
+                <h2>Our Offerings</h2>
+            </section>
 
+            <section id="Gallery">
+                <h2>A Gallery of Field & Feast</h2>
             </section>
 
         </main>
