--- a/index.html
+++ b/index.html
@@ -57,11 +57,16 @@
                         </ul>
                         <p>Elevate your home dining with the finest farm-to-table offerings, elegantly packaged and delivered with care.</p>
                     </section>
-
             </section>
 
             <section id="Gallery">
                 <h2>A Gallery of Field & Feast</h2>
+                <p>Experience the elegance and artistry behind Field & Feast through our curated collection of images. From lush fields and handcrafted ingredients to beautifully plated farm-to-table creations, each photo tells the story of our commitment to excellence.</p>
+            
+                <div class="box">
+                    <img src="pictures/tomatoes-200w.jpg 200w" srcset="pictures/tomatoes-300w.jpg 300w, pictures/tomatoes-600w.jpg 600w" alt="tomatoes hanging from tree">
+
+                </div>
             </section>
 
         </main>
