added the rest of the content
Still have to go back later and add info on the sizes for gallery section

--- a/index.html
+++ b/index.html
@@ -63,16 +63,50 @@
                 <h2>A Gallery of Field & Feast</h2>
                 <p>Experience the elegance and artistry behind Field & Feast through our curated collection of images. From lush fields and handcrafted ingredients to beautifully plated farm-to-table creations, each photo tells the story of our commitment to excellence.</p>
             
-                <div class="box">
-                    <img src="pictures/tomatoes-200w.jpg 200w" srcset="pictures/tomatoes-300w.jpg 300w, pictures/tomatoes-600w.jpg 600w" alt="tomatoes hanging from tree">
 
+                                                                                                        <!--Go back later and add in the info on sizes-->
+
+                <div class="tomatoes">
+                    <img src="pictures/tomatoes-200w.jpg" srcset="pictures/tomatoes-200w.jpg 200w, pictures/tomatoes-300w.jpg 300w, pictures/tomatoes-600w.jpg 600w" sizes="(min-width:)" alt="tomatoes hanging from tree">
+                    <p>Heirloom tomatoes at peak ripeness.</p>
                 </div>
+
+                <div class="olive-oil">
+                    <img src="pictures/olive-oil-200w.jpg" srcset="pictures/olive-oil-200w.jpg 200w, pictures/olive-oil-300w.jpg 300w, pictures/olive-oil-600w.jpg 600w" sizes="(min-width:)" alt="green olives in a wooden bowl with olive oil dripping down on it">
+                    <p>Drizzling golden olive oil over fresh harvest.</p>
+                </div>
+
+                <div class="table-setting">
+                    <img src="pictures/table-setting-200w.jpg" srcset="pictures/table-setting-200w.jpg 200w, pictures/table-setting-300w.jpg 300w, pictures/table-setting-600w.jpg 600w" sizes="(min-width:)" alt="zoomed in table setting with candlestick in the center">
+                    <p>Elegant tablescape under the evening sky.</p>
+                </div>
+
+                <div class="chef-plating">
+                    <img src="pictures/chef-plating-200w.jpg" srcset="pictures/chef-plating-200w.jpg 200w, pictures/chef-plating-300w.jpg 300w, pictures/chef-plating-600w.jpg 600w" sizes="(min-width:)" alt="chef plating a sandwich in the kitchen">
+                    <p>Artful plating with seasonal ingredients.</p>
+                </div>
+
+                <div class="basket">
+                    <img src="pictures/basket-200w.jpg" srcset="pictures/basket-200w.jpg 200w, pictures/basket-300w.jpg 300w, pictures/basket-600w.jpg 600w" sizes="(min-width:)" alt="tomatoes hanging from tree">
+                    <p>Our monthly basket, curated with care.</p>
+                </div>
+
+                <p><a href="#">View Our Full Gallery</a></p>
             </section>
 
         </main>
 
         <footer>
+            <div class="footer-address">
+                123 Estate Lane, Wine Country, CA <br>
+                (555) 123-4567 <br>
+                <a href="hello@fieldandfeast.com">hello@fieldandfeast.com</a><br>
+            </div>
 
+            <div class="footer-social">
+                <a href="">Instagram</a>
+                <a href="">Facebook</a>
+            </div>
         </footer>
 
 
