--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
 
 
-<!--SELF NOTE-- don't forget to keep sectioning parts again so its easier to find things-->
+<!--SELF NOTE don't forget to keep sectioning parts again so its easier to find things-->
     <body>
 
         <header>
@@ -47,7 +47,7 @@
                         <p>Join us for intimate chef-led tastings and farm-to-table feasts, where carefully crafted menus highlight the best of the season.</p>
                     </section>
 
-                    <section class="">
+                    <section class="The-Field-Feast-Monthly-Basket">
                         <h3>The Field & Feast Monthly Basket</h3>
                         <p>Experience a curated selection of premium seasonal ingredients delivered to your doorstep each month.</p>
                         <ul>
@@ -62,32 +62,31 @@
             <section id="Gallery">
                 <h2>A Gallery of Field & Feast</h2>
                 <p>Experience the elegance and artistry behind Field & Feast through our curated collection of images. From lush fields and handcrafted ingredients to beautifully plated farm-to-table creations, each photo tells the story of our commitment to excellence.</p>
-            
 
                                                                                                         <!--Go back later and add in the info on sizes-->
 
                 <div class="tomatoes">
-                    <img src="pictures/tomatoes-200w.jpg" srcset="pictures/tomatoes-200w.jpg 200w, pictures/tomatoes-300w.jpg 300w, pictures/tomatoes-600w.jpg 600w" sizes="(min-width:)" alt="tomatoes hanging from tree">
+                    <img src="pictures/tomatoes-200w.jpg" srcset="pictures/tomatoes-200w.jpg 200w, pictures/tomatoes-300w.jpg 300w, pictures/tomatoes-600w.jpg 600w" sizes="(min-width: 900px) 600px, 100vw" alt="tomatoes hanging from tree">
                     <p>Heirloom tomatoes at peak ripeness.</p>
                 </div>
 
                 <div class="olive-oil">
-                    <img src="pictures/olive-oil-200w.jpg" srcset="pictures/olive-oil-200w.jpg 200w, pictures/olive-oil-300w.jpg 300w, pictures/olive-oil-600w.jpg 600w" sizes="(min-width:)" alt="green olives in a wooden bowl with olive oil dripping down on it">
+                    <img src="pictures/olive-oil-200w.jpg" srcset="pictures/olive-oil-200w.jpg 200w, pictures/olive-oil-300w.jpg 300w, pictures/olive-oil-600w.jpg 600w" sizes="(min-width: 900px) 600px, 100vw" alt="green olives in a wooden bowl with olive oil dripping down on it">
                     <p>Drizzling golden olive oil over fresh harvest.</p>
                 </div>
 
                 <div class="table-setting">
-                    <img src="pictures/table-setting-200w.jpg" srcset="pictures/table-setting-200w.jpg 200w, pictures/table-setting-300w.jpg 300w, pictures/table-setting-600w.jpg 600w" sizes="(min-width:)" alt="zoomed in table setting with candlestick in the center">
+                    <img src="pictures/table-setting-200w.jpg" srcset="pictures/table-setting-200w.jpg 200w, pictures/table-setting-300w.jpg 300w, pictures/table-setting-600w.jpg 600w" sizes="(min-width: 900px) 600px, 100vw" alt="zoomed in table setting with candlestick in the center">
                     <p>Elegant tablescape under the evening sky.</p>
                 </div>
 
                 <div class="chef-plating">
-                    <img src="pictures/chef-plating-200w.jpg" srcset="pictures/chef-plating-200w.jpg 200w, pictures/chef-plating-300w.jpg 300w, pictures/chef-plating-600w.jpg 600w" sizes="(min-width:)" alt="chef plating a sandwich in the kitchen">
+                    <img src="pictures/chef-plating-200w.jpg" srcset="pictures/chef-plating-200w.jpg 200w, pictures/chef-plating-300w.jpg 300w, pictures/chef-plating-600w.jpg 600w" sizes="(min-width: 900px) 600px, 100vw" alt="chef plating a sandwich in the kitchen">
                     <p>Artful plating with seasonal ingredients.</p>
                 </div>
 
                 <div class="basket">
-                    <img src="pictures/basket-200w.jpg" srcset="pictures/basket-200w.jpg 200w, pictures/basket-300w.jpg 300w, pictures/basket-600w.jpg 600w" sizes="(min-width:)" alt="tomatoes hanging from tree">
+                    <img src="pictures/basket-200w.jpg" srcset="pictures/basket-200w.jpg 200w, pictures/basket-300w.jpg 300w, pictures/basket-600w.jpg 600w" sizes="(min-width: 900px) 600px, 100vw" alt="fresh fruits in baskets outside">
                     <p>Our monthly basket, curated with care.</p>
                 </div>
 
