added more self notes
added more self notes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
 
 
-<!--SELF NOTE don't forget to keep sectioning parts again so its easier to find things-->
+<!--SELF NOTE. don't forget to keep sectioning parts again so its easier to find things-->
     <body>
 
         <header>
@@ -63,7 +63,7 @@
                 <h2>A Gallery of Field & Feast</h2>
                 <p>Experience the elegance and artistry behind Field & Feast through our curated collection of images. From lush fields and handcrafted ingredients to beautifully plated farm-to-table creations, each photo tells the story of our commitment to excellence.</p>
 
-                                                                                                        <!--Go back later and add in the info on sizes-->
+                                                                                                        <!--SELF NOTE. Go back later and add in the info on sizes, DONE, check back on it again if any css codes doesn't work-->
 
                 <div class="tomatoes">
                     <img src="pictures/tomatoes-200w.jpg" srcset="pictures/tomatoes-200w.jpg 200w, pictures/tomatoes-300w.jpg 300w, pictures/tomatoes-600w.jpg 600w" sizes="(min-width: 900px) 600px, 100vw" alt="tomatoes hanging from tree">
