added self note for css selector tag reminder

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
         </nav>
 
 
+<!--SELF NOTE important!!!! . is class selector and # is id selector for css-->
+<!--     So for example for section class="Artisan-Provisions", the css selector would be .Artisan--Provisions      -->
+<!--     So for example for section id="About-Us",              the css selector would be #About-Us                 -->
+
         <main>
             <section id="About-Us">
                 <h2>Welcome to Field & Feast</h2>
